Fixed table wrapping on browse page

--- a/public/stylesheets/theme.css
+++ b/public/stylesheets/theme.css
@@ -17,9 +17,10 @@ legend {
 /*Tabbing*/
 #tabs {
 	overflow: auto;
-	width: 230px;
 	float: left;
 	position: relative;
+	/*margin-right: 50px;*/
+	width: 230px;
 }
 #sub-menu {
 }
@@ -375,6 +376,9 @@ ul#sub-menu {
 	background-color: #e4e4e4;
 }
 
+#browse-navigation {
+	overflow: auto;
+}
 
 #browse-results {
 	position: relative;
